# GENNI

./: .gitignore  AUTHORS.txt  LICENSE  Makefile  README.md  TODO.md  environment.yml  experiment.py  genni.yml  pyproject.toml  setup.cfg  setup.py
experiments/FCN_Sample/models/1604791948.6427572/step_0/: model_1.pt  model_4.pt
experiments/FCN_Sample/models/1604791948.6427572/step_1/: model_0.pt  model_2.pt  model_4.pt  model_5.pt  model_6.pt  model_8.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_1001/: model_1.pt  model_4.pt  model_5.pt  model_6.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_101/: model_1.pt  model_6.pt  model_8.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_126/: model_0.pt  model_4.pt  model_6.pt  model_7.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_151/: model_0.pt  model_4.pt  model_7.pt  model_8.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_176/: model_0.pt  model_3.pt  model_5.pt  model_6.pt  model_7.pt
experiments/FCN_Sample/models/1604791948.6427572/step_201/: model_2.pt  model_3.pt  model_5.pt  model_6.pt
experiments/FCN_Sample/models/1604791948.6427572/step_226/: model_2.pt  model_6.pt  model_8.pt
experiments/FCN_Sample/models/1604791948.6427572/step_251/: model_1.pt  model_2.pt  model_3.pt  model_4.pt  model_5.pt  model_8.pt
experiments/FCN_Sample/models/1604791948.6427572/step_26/: model_5.pt  model_6.pt  model_7.pt  model_8.pt
experiments/FCN_Sample/models/1604791948.6427572/step_276/: model_1.pt  model_8.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_301/: model_5.pt  model_7.pt  model_8.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_326/: model_2.pt  model_3.pt  model_4.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_351/: model_0.pt  model_1.pt  model_4.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_376/: model_0.pt  model_1.pt  model_2.pt  model_5.pt
experiments/FCN_Sample/models/1604791948.6427572/step_401/: model_2.pt  model_3.pt  model_4.pt  model_6.pt  model_8.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_426/: model_3.pt  model_4.pt  model_6.pt  model_8.pt  model_9.pt
experiments/FCN_Sample/models/1604791948.6427572/step_451/: model_0.pt  model_2.pt  model_4.pt  model_8.pt
experiments/FCN_Sample/runs/1604791948.6427572/: config.yml  events.out.tfevents.1604791953.Daniels-MacBook-Pro-4.local.58955.0
genni/: README.md  __init__.py  data_getters.py  experiment.py  save_load.py  training.py  training_utils.py  utils.py
genni/griding/: __init__.py  get_grid.py  interpolation.py  stats_plotting.py
genni/nets/: Nets.py
notebooks/: .gitignore  Analysis.ipynb  SubspaceAnalysis.ipynb
notebooks/playground/: Analysis.ipynb  UMAP High Dim.ipynb
notebooks_2/: Analysis.ipynb  SubspaceAnalysis.ipynb
sample_experiments/LeNet_Sample/runs/1604840074.30416/: config.yml  events.out.tfevents.1604840077.Daniels-MacBook-Pro-4.local.62031.0
scripts/: experiment.py  experiment_config.json
src/: data_getters.py  save_load.py  training_utils.py  utils.py
src/griding/: interpolation.py  stats_plotting.py
(+525 files in other folders)
