[metadata]
name = genni
version = 1.0.0
author = Arinbjörn Kolbeinsson, Daneil Lengyel, Isak Falk, Janith Petangoda, Kate Highnam, Michalis Lazarou
author_email = ucabitf@ucl.ac.uk
maintainer = Isak Falk
maintainer_email = ucabitf@ucl.ac.uk
url = https://github.com/Do-Not-Circulate/GENNI_public
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
license = MIT License
license_file = LICENSE
description = GENNI: Visualising the Geometry of Equivalences for Neural Network Identifiability
long_description = file: README.md
keywords = ml, ai, visualisation, neuralnetworks
platforms = Windows, Linux, OSX

[options]
packages = "genni"
install_requires =
   pyyaml
   torch
   torchvision
   ray[tune]
   numpy
   matplotlib
   pandas; python_version >="3.6"
