[metadata]
name = genni
version = 0.1.1
author = Arinbjörn Kolbeinsson, Daneil Lengyel, Isak Falk, Janith Petangoda, Kate Highnam, Michalis Lazarou
author_email = ucabitf@ucl.ac.uk
maintainer = Isak Falk
maintainer_email = ucabitf@ucl.ac.uk
url = https://github.com/Do-Not-Circulate/GENNI_public
license = MIT
license_file = LICENSE
description = GENNI: Visualising the Geometry of Equivalences for Neural Network Identifiability
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ml, ai, visualisation, neuralnetworks
platforms = Windows, Linux, OSX
classifiers = License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.8
              Operating System :: OS Independent

[options]
packages = genni
install_requires =
   pyyaml
   torch
   torchvision
   tensorboard ==2.3.0
   ray[tune]
   numpy
   matplotlib
   pandas
   tqdm; python_version >="3.6"
